--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Create a new student: </h1>
+<h1> Student Form </h1>
 
 <%= form_tag students_path do %>
   <label> First name: </label>
@@ -7,5 +7,5 @@
   <label> Last name: </label>
   <%= text_field_tag :'student[last_name' %> <br>
 
-  <%= submit_tag "Submit Student" %>
+  <%= submit_tag "Create Student" %>
 <% end %>
